Update Readme and Update Mivus feature extraction module (#1699)
* add recall inference similarity

* update examples

* updatea readme

* update dir name

* update neural search readme

* update milvus readme

* update domain adaptive pretraining readme

* fix the mistakes

* update readme

* add recall Paddle Serving Support

* update readme

* update readme and format the code

* reformat the files

* move the files

* reformat the code

* remove redundant code

* update changes

* Add C++ Paddle Serving

* Update Readme and Update Mivus feature extraction module

* check formats

* update serving config

* deleted redundant code

Co-authored-by: Zeyu Chen <chenzeyu01@baidu.com>
Co-authored-by: tianxin <tianxin04@baidu.com>

--- a/applications/neural_search/recall/in_batch_negative/deploy/python/config_nlp.yml
+++ b/applications/neural_search/recall/in_batch_negative/deploy/python/config_nlp.yml
@@ -22,6 +22,8 @@ op:
     local_service_conf:
       # client类型，包括brpc, grpc和local_predictor.local_predictor不启动Serving服务，进程内预测
       client_type: local_predictor
+      #ir_optim
+      ir_optim: True
       # device_type, 0=cpu, 1=gpu, 2=tensorRT, 3=arm cpu, 4=kunlun xpu
       device_type: 1
       # 计算硬件ID，当devices为""或不写时为CPU预测；当devices为"0", "0,1,2"时为GPU预测，表示使用的GPU卡
