--- a/paddlenlp/ops/patches/FasterTransformer/CMakeLists.txt
+++ b/paddlenlp/ops/patches/FasterTransformer/CMakeLists.txt
@@ -285,7 +285,7 @@ link_directories(
 
 add_subdirectory(fastertransformer)
 add_subdirectory(tools)
-add_subdirectory(sample)
+# add_subdirectory(sample)
 
 ########################################
 
