--- a/examples/language_model/ernie-3.0/config.yml
+++ b/examples/language_model/ernie-3.0/config.yml
@@ -15,61 +15,60 @@ DefaultArgs:
     metric: "Accuracy"
     do_train: True
     save_steps: 100
-
+    max_answer_length: 50
 # Datasets which used for sequence classfication
 SequenceClassification:
     clue afqmc: 
-        num_train_epochs: 4
+        num_train_epochs: 6
+        learning_rate: 0.00003
+        batch_size: 64
+        max_seq_length: 128
     clue tnews:
         num_train_epochs: 3
-    clue iflytek:
-        num_train_epochs: 8
-    clue ocnli:
-        num_train_epochs: 8
-    clue cmnli: 
-        num_train_epochs: 3
-    clue cluewsc2020: 
-        num_train_epochs: 1
-    clue wsc: 
-        num_train_epochs: 20
-    clue csl:
-        num_train_epochs: 10
-        max_seq_length: 256
+        learning_rate: 0.00005
         batch_size: 32
-    xnli_cn:
-        learning_rate: 0.0001
+        max_seq_length: 128
+    clue iflytek:
         num_train_epochs: 3
-        batch_size: 256
-    chnsenticorp_v2:
         learning_rate: 0.00005
         batch_size: 16
+        max_seq_length: 128
+    clue ocnli:
+        num_train_epochs: 6
+        learning_rate: 0.00005
+        batch_size: 64
+        max_seq_length: 128
+    clue cmnli: 
+        num_train_epochs: 4
+        learning_rate: 0.00002
+        batch_size: 32
+        max_seq_length: 128
+    clue cluewsc2020: 
+        num_train_epochs: 50
+        learning_rate: 0.00003
+        batch_size: 16
+        max_seq_length: 128
+    clue csl:
         num_train_epochs: 8
+        learning_rate: 0.00005
+        max_seq_length: 256
+        batch_size: 64
 
 # Datasets which used for token classfication
 TokenClassification:
-    peoples_daily_ner:
-        learning_rate: 0.00005
-        num_train_epochs: 4
-        batch_size: 128
     msra_ner:
         num_train_epochs: 3
+        learning_rate: 0.00005
+        save_steps: 100
+        batch_size: 32
+        max_seq_length: 128
+        remove_unused_columns: False
 
 # Datasets which used for question answersing
 QuestionAnswering:
     cmrc2018:
-        learning_rate: 0.00005
-        num_train_epochs: 1
-        batch_size: 32
-        max_seq_length: 384
-    dureader_nlp:
-        num_train_epochs: 1
-        batch_size: 12
-        max_seq_length: 384
-    dureader_robust:
-        num_train_epochs: 1
-        batch_size: 12
-        max_seq_length: 384
-    dlbp:
-        num_train_epochs: 1
-        batch_size: 12
-        max_seq_length: 384
+        learning_rate: 0.00003
+        num_train_epochs: 2
+        batch_size: 24
+        max_seq_length: 512
+
