--- a/faster_tokenizers/faster_tokenizers/src/postprocessors/CMakeLists.txt
+++ b/faster_tokenizers/faster_tokenizers/src/postprocessors/CMakeLists.txt
@@ -1,1 +1,1 @@
-cc_library(postprocessors SRCS bert.cc postprocessor.cc DEPS core)
+cc_library(postprocessors SRCS bert.cc postprocessor.cc DEPS core json)
