--- a/faster_tokenizers/faster_tokenizers/src/pretokenizers/CMakeLists.txt
+++ b/faster_tokenizers/faster_tokenizers/src/pretokenizers/CMakeLists.txt
@@ -1,1 +1,1 @@
-cc_library(pretokenizers SRCS pretokenizer.cc whitespace.cc bert.cc DEPS normalizers core)
+cc_library(pretokenizers SRCS pretokenizer.cc whitespace.cc bert.cc DEPS normalizers core json)
