Add faster tokenizers cpp package (#2139)
* Fix package name

* Add comment

* Add cpp lib install

* remove pybind headers

* Add ErnieFasterTokenizer

* Add third party include headers

--- a/faster_tokenizers/faster_tokenizers/src/CMakeLists.txt
+++ b/faster_tokenizers/faster_tokenizers/src/CMakeLists.txt
@@ -4,4 +4,11 @@ add_subdirectory(normalizers)
 add_subdirectory(pretokenizers)
 add_subdirectory(postprocessors)
 add_subdirectory(core)
+# set the relative path of shared library
+set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} -Wl,-rpath='$ORIGIN'")
+
+if (WITH_PYTHON)
 add_subdirectory(pybind)
+else(WITH_PYTHON)
+add_subdirectory(tokenizers)
+endif(WITH_PYTHON)
