Update ERNIE 3.0 readme (#2167)
* update readme

* update ernie 3.0  readme, add compress api doc

* add doc for compression api

--- a/model_zoo/ernie-3.0/config.yml
+++ b/model_zoo/ernie-3.0/config.yml
@@ -66,7 +66,7 @@ TokenClassification:
 
 # Datasets which used for question answersing
 QuestionAnswering:
-    cmrc2018:
+    clue cmrc2018:
         learning_rate: 0.00003
         num_train_epochs: 8
         batch_size: 24
