Add decoder module for faster tokenizers (#2204)
* Add wordpiece decoder cpp impl

* Add decode api in tokenizer

* Add decode_batch and decode python api

* Add decoder property

* Fix decode, decode_batch pybind

* Add _decoder for faster_tokenizer

* Fix decoder bug

* pointer to reference

--- a/faster_tokenizers/faster_tokenizers/src/CMakeLists.txt
+++ b/faster_tokenizers/faster_tokenizers/src/CMakeLists.txt
@@ -12,7 +12,7 @@ add_subdirectory(pybind)
 cc_library(core_tokenizers SHARED
            SRCS pybind/pybind.cc tokenizers/ernie_faster_tokenizer.cc
            DEPS pybind python pybind_normalizers pybind_utils
-                pybind_pretokenizers pybind_models
+                pybind_pretokenizers pybind_models pybind_decoders
                 pybind_postprocessors pybind_tokenizers pybind_exception
                 pybind_core normalizers pretokenizers core models
                 tokenizer added_vocabulary postprocessors json)
@@ -21,6 +21,6 @@ else(WITH_PYTHON)
 # add_subdirectory(tokenizers)
 cc_library(core_tokenizers SHARED
            SRCS tokenizers/ernie_faster_tokenizer.cc
-           DEPS normalizers pretokenizers models
+           DEPS normalizers pretokenizers models decoders
                 postprocessors core added_vocabulary tokenizer json)
 endif(WITH_PYTHON)
