--- a/requirements.txt
+++ b/requirements.txt
@@ -3,9 +3,9 @@ colorlog
 colorama
 seqeval
 multiprocess
-datasets>=2.0.0
+datasets >= 2.0.0
 tqdm
 paddlefsl
 sentencepiece
-scipy<=1.3.1
+scipy <= 1.3.1; sys_platform == 'win32'
 paddle2onnx
