Support FasterTransformer compiled with paddle inference lib with onnx (#2463)
* add onnx support

* update readme

--- a/paddlenlp/ops/patches/FasterTransformer/CMakeLists.txt
+++ b/paddlenlp/ops/patches/FasterTransformer/CMakeLists.txt
@@ -201,12 +201,20 @@ if(BUILD_PD)
     include_directories("${PADDLE_LIB_THIRD_PARTY_PATH}glog/include")
     include_directories("${PADDLE_LIB_THIRD_PARTY_PATH}gflags/include")
     include_directories("${PADDLE_LIB_THIRD_PARTY_PATH}xxhash/include")
+    if (WITH_ONNXRUNTIME)
+      include_directories("${PADDLE_LIB_THIRD_PARTY_PATH}onnxruntime/include")
+      include_directories("${PADDLE_LIB_THIRD_PARTY_PATH}paddle2onnx/include")
+    endif()
 
     link_directories("${PADDLE_LIB_THIRD_PARTY_PATH}protobuf/lib")
     link_directories("${PADDLE_LIB_THIRD_PARTY_PATH}glog/lib")
     link_directories("${PADDLE_LIB_THIRD_PARTY_PATH}gflags/lib")
     link_directories("${PADDLE_LIB_THIRD_PARTY_PATH}xxhash/lib")
     link_directories("${PADDLE_LIB}/paddle/lib")
+    if (WITH_ONNXRUNTIME)
+      include_directories("${PADDLE_LIB_THIRD_PARTY_PATH}onnxruntime/lib")
+      include_directories("${PADDLE_LIB_THIRD_PARTY_PATH}paddle2onnx/lib")
+    endif()
 
     if(WITH_MKL)
       set(FLAG_OPENMP "-fopenmp")
