--- a/paddlenlp/ops/faster_transformer/src/CMakeLists.txt
+++ b/paddlenlp/ops/faster_transformer/src/CMakeLists.txt
@@ -52,12 +52,20 @@ if(ON_INFER)
   include_directories("${PADDLE_LIB_THIRD_PARTY_PATH}glog/include")
   include_directories("${PADDLE_LIB_THIRD_PARTY_PATH}gflags/include")
   include_directories("${PADDLE_LIB_THIRD_PARTY_PATH}xxhash/include")
+  if (WITH_ONNXRUNTIME)
+    include_directories("${PADDLE_LIB_THIRD_PARTY_PATH}onnxruntime/include")
+    include_directories("${PADDLE_LIB_THIRD_PARTY_PATH}paddle2onnx/include")
+  endif()
 
   link_directories("${PADDLE_LIB_THIRD_PARTY_PATH}protobuf/lib")
   link_directories("${PADDLE_LIB_THIRD_PARTY_PATH}glog/lib")
   link_directories("${PADDLE_LIB_THIRD_PARTY_PATH}gflags/lib")
   link_directories("${PADDLE_LIB_THIRD_PARTY_PATH}xxhash/lib")
   link_directories("${PADDLE_LIB}/paddle/lib")
+  if (WITH_ONNXRUNTIME)
+    link_directories("${PADDLE_LIB_THIRD_PARTY_PATH}onnxruntime/lib")
+    link_directories("${PADDLE_LIB_THIRD_PARTY_PATH}paddle2onnx/lib")
+  endif()
 
   if (WIN32)
     add_definitions("/DGOOGLE_GLOG_DLL_DECL=")
@@ -135,6 +143,10 @@ if(ON_INFER)
     else()
       set(DEPS ${PADDLE_LIB}/paddle/lib/libpaddle_inference${CMAKE_SHARED_LIBRARY_SUFFIX})
     endif()
+  endif()
+
+  if (WITH_ONNXRUNTIME)
+    set(DEPS ${DEPS} ${PADDLE_LIB_THIRD_PARTY_PATH}onnxruntime/lib/libonnxruntime.so.1.10.0 paddle2onnx)
   endif()
 
   if (NOT WIN32)
