--- a/faster_tokenizer/faster_tokenizer/src/models/CMakeLists.txt
+++ b/faster_tokenizer/faster_tokenizer/src/models/CMakeLists.txt
@@ -1,2 +1,2 @@
-cc_library(models SRCS wordpiece.cc faster_wordpiece.cc DEPS core json trie failure)
+cc_library(models SRCS wordpiece.cc faster_wordpiece.cc DEPS core json trie failure icu)
 add_dependencies(models extern_boost)
