--- a/applications/text_classification/multi_class/deploy/paddle_serving/config.yml
+++ b/applications/text_classification/multi_class/deploy/paddle_serving/config.yml
@@ -46,7 +46,7 @@ op:
             #计算硬件ID，当devices为""或不写时为CPU预测；当devices为"0", "0,1,2"时为GPU预测，表示使用的GPU卡
             devices: "0"
 
-            #use_mkldnn
+            #开启MKLDNN加速
             use_mkldnn: True
 
             #thread_num
