Fix faster_tokenizer windows compile (#2744)
* uint -> uint32_t

* fix dependency of icu

* update icu cmake

* Fix uint->uint32_t

* use utf8 instead of unicode character in metaspace

* Fix icu cmake

* Add some cxx flag for windows

* Remove BertPreTokenizer from BertConverter

* Change DBUILD_SHARED

* adjust python.h pos

* remove BUILD_SHARED of re2

* Fix windows package

* Add windows python dll path setting

* Add windows python dll path setting

* Add icu dll copy

* Add faster_tokenizer.libs module

* Fix icu path

* Fix wordpiece save

* use emplace_back instead of push_back to avoid error in windows

* Fix special tokens pretokenization

Co-authored-by: Zeyu Chen <chenzeyu01@baidu.com>

--- a/faster_tokenizer/faster_tokenizer/src/CMakeLists.txt
+++ b/faster_tokenizer/faster_tokenizer/src/CMakeLists.txt
@@ -18,6 +18,10 @@ cc_library(core_tokenizers SHARED
                 pybind_core normalizers pretokenizers core models
                 tokenizer added_vocabulary postprocessors json)
 set_target_properties(core_tokenizers PROPERTIES PREFIX "")
+if (WIN32)
+set_target_properties(core_tokenizers PROPERTIES SUFFIX ".pyd")
+endif()
+
 else(WITH_PYTHON)
 # add_subdirectory(tokenizers)
 cc_library(core_tokenizers SHARED
