--- a/faster_tokenizer/faster_tokenizer/src/models/CMakeLists.txt
+++ b/faster_tokenizer/faster_tokenizer/src/models/CMakeLists.txt
@@ -1,2 +1,3 @@
-cc_library(models SRCS wordpiece.cc faster_wordpiece.cc bpe.cc unigram.cc DEPS core json trie failure icuuc icudata lattice)
-add_dependencies(models extern_boost)
+cc_library(models
+        SRCS wordpiece.cc faster_wordpiece.cc bpe.cc unigram.cc
+        DEPS core json boost trie failure icuuc icudata lattice utils)
