--- a/faster_tokenizer/faster_tokenizer/src/postprocessors/CMakeLists.txt
+++ b/faster_tokenizer/faster_tokenizer/src/postprocessors/CMakeLists.txt
@@ -1,1 +1,1 @@
-cc_library(postprocessors SRCS bert.cc postprocessor.cc template.cc DEPS core json)
+cc_library(postprocessors SRCS bert.cc postprocessor.cc template.cc DEPS core json boost)
