--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -5,6 +5,7 @@ sphinx==3.5.2
 sphinx_rtd_theme==0.5.2
 readthedocs-sphinx-search==0.1.0
 
+Markdown < 3.4
 sphinx-copybutton==0.3.1
 sphinx-markdown-tables==0.0.15
 
