Update requirements.txt and README of pipelines (#2842)
* Update requirements.txt and README of pipelines

* Restore semantic search readme

* Remove question answering faq

* Add bash files

* remove pdftotext and update readme

Co-authored-by: tianxin <tianxin04@baidu.com>

--- a/applications/experimental/pipelines/requirements.txt
+++ b/applications/experimental/pipelines/requirements.txt
@@ -15,3 +15,9 @@ pdfplumber
 faiss-cpu>=1.7.2
 opencv-python
 opencv-contrib-python-headless
+python-multipart
+st-annotated-text
+streamlit==1.9.0
+fastapi
+uvicorn
+markdown
