--- a/faster_tokenizer/faster_tokenizer/src/pretokenizers/CMakeLists.txt
+++ b/faster_tokenizer/faster_tokenizer/src/pretokenizers/CMakeLists.txt
@@ -1,1 +1,3 @@
-cc_library(pretokenizers SRCS pretokenizer.cc whitespace.cc bert.cc metaspace.cc DEPS normalizers core json utils)
+cc_library(pretokenizers
+  SRCS pretokenizer.cc whitespace.cc bert.cc metaspace.cc sequence.cc
+  DEPS normalizers core json utils)
