--- a/pipelines/examples/semantic-search/docker/Dockerfile-GPU
+++ b/pipelines/examples/semantic-search/docker/Dockerfile-GPU
@@ -1,6 +1,6 @@
-FROM w5688414/pipelines:1.3
+FROM w5688414/pipelines-cpu-linux:1.3
 COPY start.sh /root/start.sh
-COPY build_index.sh /root/PaddleNLP/applications/experimental/pipelines
+COPY create_index.sh /root/PaddleNLP/applications/experimental/pipelines
 COPY run_server.sh  /root/PaddleNLP/applications/experimental/pipelines 
 COPY run_client.sh /root/PaddleNLP/applications/experimental/pipelines
 RUN chmod +x /root/start.sh
