--- a/pipelines/rest_api/pipeline/semantic_search.yaml
+++ b/pipelines/rest_api/pipeline/semantic_search.yaml
@@ -7,18 +7,19 @@ components:    # define all the building-blocks for Pipeline
       host: localhost
       port: 9200
       index: dureader_robust_query_encoder
+      embedding_dim: 312
   - name: Retriever
     type: DensePassageRetriever
     params:
       document_store: DocumentStore    # params can reference other components defined in the YAML
       top_k: 10
-      query_embedding_model: rocketqa-zh-dureader-query-encoder
-      passage_embedding_model: rocketqa-zh-dureader-query-encoder
+      query_embedding_model: rocketqa-zh-nano-query-encoder
+      passage_embedding_model: rocketqa-zh-nano-para-encoder
       embed_title: False
   - name: Ranker       # custom-name for the component; helpful for visualization & debugging
     type: ErnieRanker    # pipelines Class name for the component
     params:
-      model_name_or_path: rocketqa-zh-dureader-cross-encoder
+      model_name_or_path: rocketqa-nano-cross-encoder
       top_k: 3
   - name: TextFileConverter
     type: TextConverter
