--- a/faster_tokenizer/faster_tokenizer/demo/CMakeLists.txt
+++ b/faster_tokenizer/faster_tokenizer/demo/CMakeLists.txt
@@ -14,7 +14,7 @@ else()
     set(CMAKE_CXX_STANDARD 11)
 endif()
 
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O3")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O3 -Wno-narrowing")
 
 if(NOT DEFINED FASTER_TOKENIZER_LIB)
   message(FATAL_ERROR "please set FASTER_TOKENIZER_LIB with -DFASTER_TOKENIZER_LIB=/path/to/faster_tokenizer")
@@ -50,7 +50,10 @@ SET_PROPERTY(TARGET icuuc PROPERTY IMPORTED_LOCATION ${FASTER_TOKENIZER_LIB}/thi
 SET_PROPERTY(TARGET icuuc PROPERTY IMPORTED_IMPLIB ${FASTER_TOKENIZER_LIB}/third_party/lib/icuuc.lib)
 
 target_link_libraries(ernie_faster_tokenizer_demo core_tokenizers icudt icuuc)
-else(WIN32)
+elseif(APPLE)
+SET_PROPERTY(TARGET core_tokenizers PROPERTY IMPORTED_LOCATION ${FASTER_TOKENIZER_LIB}/lib/libcore_tokenizers.dylib)
+target_link_libraries(ernie_faster_tokenizer_demo core_tokenizers)
+else()
 SET_PROPERTY(TARGET core_tokenizers PROPERTY IMPORTED_LOCATION ${FASTER_TOKENIZER_LIB}/lib/libcore_tokenizers.so)
 target_link_libraries(ernie_faster_tokenizer_demo core_tokenizers)
-endif(WIN32)
+endif()
