--- a/pipelines/docker/Dockerfile
+++ b/pipelines/docker/Dockerfile
@@ -1,7 +1,7 @@
-FROM paddlepaddle/pipelines:1.0
+FROM paddlepaddle/paddlenlp:pipelines-cpu-1.0
 COPY start.sh /root/start.sh
 COPY create_index.sh /root/PaddleNLP/pipelines
-COPY run_server.sh  /root/PaddleNLP/pipelines 
+COPY run_server.sh  /root/PaddleNLP/pipelines
 COPY run_client.sh /root/PaddleNLP/pipelines
 COPY semantic_search.yaml /root/PaddleNLP/pipelines
 COPY dense_qa.yaml /root/PaddleNLP/pipelines
