--- a/faster_tokenizer/faster_tokenizer/CMakeLists.txt
+++ b/faster_tokenizer/faster_tokenizer/CMakeLists.txt
@@ -22,14 +22,12 @@ cc_library(core_tokenizers SHARED
 set_target_properties(core_tokenizers PROPERTIES PREFIX "")
 if (WIN32)
 set_target_properties(core_tokenizers PROPERTIES SUFFIX ".pyd")
-elseif(APPLE)
-set_target_properties(core_tokenizers PROPERTIES SUFFIX ".dylib")
 else()
 set_target_properties(core_tokenizers PROPERTIES SUFFIX ".so")
 endif()
 
 if (APPLE)
-  SET(CMAKE_INSTALL_RPATH "@loader_path/core_tokenizers.dylib")
+  SET(CMAKE_INSTALL_RPATH "@loader_path/core_tokenizers.so")
 endif()
 
 else(WITH_PYTHON)
